Closed
Bug 1919404
Opened 2 months ago
Closed 1 month ago
`GPUSupportedLimits.maxInterStageShaderComponents` is no longer part of the WebGPU spec.
Categories
(Core :: Graphics: WebGPU, defect, P1)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
132 Branch
Tracking | Status | |
---|---|---|
firefox132 | --- | fixed |
People
(Reporter: ErichDonGubler, Assigned: ErichDonGubler)
References
(Blocks 1 open bug, Regressed 2 open bugs)
Details
Attachments
(2 files)
Upstream link to track this: wgpu
#6290
Assignee | ||
Comment 1•1 month ago
|
||
Updated•1 month ago
|
Assignee: nobody → egubler
Status: NEW → ASSIGNED
Assignee | ||
Updated•1 month ago
|
Priority: P2 → P1
Assignee | ||
Comment 2•1 month ago
|
||
Discovered and remedied alongside
this comment of mine in
gpuweb/cts#3834.
😅
Updated•1 month ago
|
Attachment #9427797 -
Attachment description: Bug 1919404 - chore(webgpu): remove stale `maxInterStageShaderComponents` test r=#webgpu-reviewers! → Bug 1919404 - chore(webgpu): remove stale `maxInterStageShaderComponents.as_worker.js` CTS file r=#webgpu-reviewers
Pushed by egubler@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/31f6acd94713
chore(webgpu)!: remove `GPUSupportedLimits.maxInterStageShaderComponents` r=webgpu-reviewers,webidl,nical,saschanaz
https://hg.mozilla.org/integration/autoland/rev/ff317fe9c035
chore(webgpu): remove stale `maxInterStageShaderComponents.as_worker.js` CTS file
Comment 4•1 month ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/31f6acd94713
https://hg.mozilla.org/mozilla-central/rev/ff317fe9c035
Status: ASSIGNED → RESOLVED
Closed: 1 month ago
status-firefox132:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•