Bug 1919404 - chore(webgpu)!: remove `GPUSupportedLimits.maxInterStageShaderComponents` r=webgpu-reviewers,webidl,nical,saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D223889